--- a/src/components/carousel/_carousel.scss
+++ b/src/components/carousel/_carousel.scss
@@ -38,7 +38,6 @@ $carousel-transition:                   transform $duration-xl $easing;
 .carousel {
   position: relative;
   margin-bottom: $size-line;
-  max-width: calc(100vw - 40px);
 }
 
 .carousel__inner {
