--- a/src/components/section/_section.scss
+++ b/src/components/section/_section.scss
@@ -59,5 +59,5 @@
   text-align: center;
   margin-left: 50%;
   transform: translateX(-50%);
-  width: 100vw;
+  width: calc(100vw - var(--scrollbar-width));
 }
